# near_cross_n_sim_ex

./: .gitignore  1.sh  Cargo.toml  README.org  build.sh  create_accounts.sh  deploy.sh  only_bd_c1.sh
c1/: Cargo.toml  build.sh  deploy.sh
c1/call_view_scripts/: get_name.sh  get_number.sh  set_name.sh  set_number.sh
c1/callback_scripts/: cb_get_friend_then_set_name.sh  cb_get_friend_then_set_name_then_set_foe.sh  cb_get_i_dunno_incr_number.sh
c1/cross_contract_scripts/: deploy_con2_to.sh  get_foe.sh  get_friend.sh  get_i_dunno.sh  set_foe.sh  set_friend.sh  set_i_dunno.sh
c1/res/: c1.wasm
c1/src/: lib.rs
c1/tests/: c1.wasm  c2.wasm  general.rs
c2/: Cargo.toml  build.sh  deploy.sh
c2/call_view_scripts/: get_foe.sh  get_friend.sh  get_i_dunno.sh  set_foe.sh  set_friend.sh  set_i_dunno.sh
c2/res/: c2.wasm
c2/src/: .#lib.rs  lib.rs
